force-app/main/default/objects/Case/fields/Maintenance_Priority__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Priority__c</fullName>
    <label>Maintenance Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>