force-app/main/default/objects/Case/fields/Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>RelatedAssets</relationshipName>
    <type>Lookup</type>
</CustomField>