force-app/main/default/objects/Case/recordTypes/Billing_and_Payment.recordType-meta.xml
<RecordType>
    <fullName>Billing_and_Payment</fullName>
    <active>true</active>
    <businessProcess>Billing and Payment</businessProcess>
    <description>Billing and Payment Related Issues</description>
    <label>Billing and Payment</label>
</RecordType>