force-app/main/default/objects/Case/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <businessProcess>Maintenance Request</businessProcess>
    <description>Maintenance Related Issue</description>
    <label>Maintenance</label>
</RecordType>