force-app/main/default/objects/Case/recordTypes/Others.recordType-meta.xml
<RecordType>
    <fullName>Others</fullName>
    <active>true</active>
    <businessProcess>Other</businessProcess>
    <description>All other types of requests</description>
    <label>Others</label>
</RecordType>